--- a/proxy.ini
+++ b/proxy.ini
@@ -62,6 +62,7 @@ custom_proxy_group=🎥 奈飞视频`select`[]🎥 奈飞节点`[]🚀 节点选
 custom_proxy_group=🐭 迪士尼+`select`[]🎥 奈飞节点`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🚀 手动切换`[]DIRECT`[]🥶 冷门国家节点
 custom_proxy_group=📺 巴哈姆特`select`[]🇨🇳 台湾节点`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT`[]🥶 冷门国家节点
 custom_proxy_group=📺 哔哩哔哩港澳台`select`[]🎯 全球直连`[]🇨🇳 台湾节点`[]🇭🇰 香港节点
+custom_proxy_group=📺 爱奇艺港澳台`select`[]🎯 全球直连`[]🇨🇳 台湾节点`[]🇭🇰 香港节点
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🔮 负载均衡`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🚀 手动切换`[]DIRECT`[]🥶 冷门国家节点
 custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🔮 负载均衡`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🚀 手动切换`[]🥶 冷门国家节点
 custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🔮 负载均衡`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🚀 手动切换`[]🥶 冷门国家节点
