--- a/proxy.ini
+++ b/proxy.ini
@@ -118,3 +118,4 @@ overwrite_original_rules=true
 ;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
 
 ;luck
+clash_proxies_style=flow
