--- a/proxy.ini
+++ b/proxy.ini
@@ -119,4 +119,4 @@ overwrite_original_rules=true
 
 ;luck
 clash_proxies_style=flow
-rename_node=!!GROUPID=0!!(.*)@机场1 $1
+rename_node=!!GROUPID=!0!!(.*)@机场1 $1
