解锁流媒体

--- a/proxy.ini
+++ b/proxy.ini
@@ -119,6 +119,6 @@ overwrite_original_rules=true
 
 ;luck
 clash_proxies_style=flow
-rename_node=!!GROUPID=0!!(.*)@nexitally $1
-rename_node=!!GROUPID=1!!(.*)@Kuromis $1
-rename_node=!!GROUPID=2!!(.*)@Nint $1
+rename_node=!!GROUPID=0!!(.*)@nexitally-解锁流媒体$1
+rename_node=!!GROUPID=1!!(.*)@Kuromis-解锁流媒体$1
+rename_node=!!GROUPID=2!!(.*)@Nint-解锁流媒体$1
