--- a/proxy.ini
+++ b/proxy.ini
@@ -118,7 +118,8 @@ overwrite_original_rules=true
 ;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
 
 ;luck
+[node_pref] 
 clash_proxies_style=flow
-rename_node=!!GROUP=Nex!!(.*)@(Nex $1)
-rename_node=!!GROUP=Kur!!(.*)@(Kur $1)
-rename_node=!!GROUP=Nint!!(.*)@(Nint $1)
+rename_node=!!GROUP=Nex!!(.*)@Nex $1
+rename_node=!!GROUP=Kur!!(.*)@Kur $1)
+rename_node=!!GROUP=Nint!!(.*)@Nint $1
