--- a/proxy.ini
+++ b/proxy.ini
@@ -121,5 +121,5 @@ overwrite_original_rules=true
 [node_pref] 
 clash_proxies_style=flow
 rename_node=!!GROUP=Nex!!(.*)@Nex $1
-rename_node=!!GROUP=Kur!!(.*)@Kur $1)
+rename_node=!!GROUP=Kur!!(.*)@Kur $1
 rename_node=!!GROUP=Nint!!(.*)@Nint $1
