再次尝试重命名节点

--- a/proxy.ini
+++ b/proxy.ini
@@ -118,3 +118,7 @@ overwrite_original_rules=true
 ;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
 
 ;luck
+
+rename_node=!!GROUPID=0!!(.*)@奶昔-$1
+rename_node=!!GROUPID=1!!(.*)@库洛米-$1
+rename_node=!!GROUPID=2!!(.*)@Nint-$1
