--- a/proxy.ini
+++ b/proxy.ini
@@ -119,6 +119,6 @@ overwrite_original_rules=true
 
 ;luck
 
-rename=!!GROUPID=0!!(.*)@[奶昔]-$1
-rename=!!GROUPID=1!!(.*)@[库洛米]-$1
-rename=!!GROUPID=2!!(.*)@[Nint]-$1
+rename=!!GROUPID=0!!(.*)@[奶昔] $1
+rename=!!GROUPID=1!!(.*)@[库洛米] $1
+rename=!!GROUPID=2!!(.*)@[Nint] $1
