--- a/proxy.ini
+++ b/proxy.ini
@@ -119,6 +119,6 @@ overwrite_original_rules=true
 
 ;luck
 
-rename=!!GROUP=Nex!!(?=(^.*))@[奶昔]
-rename=!!GROUP=Kur!!(?=(^.*))@[库洛米]
-rename=!!GROUP=Nint!!(?=(^.*))@[Nint]
+rename=!!GROUPID=0!!(?=(^.*))@[奶昔]
+rename=!!GROUPID=1!!(?=(^.*))@[库洛米]
+rename=!!GROUPID=2!!(?=(^.*))@[Nint]
