--- a/nint.yml
+++ b/nint.yml
@@ -7,7 +7,7 @@ mode: Rule
 log-level: info
 proxies:
   - {
-      "name": "🤦‍♂️ Nint Socket Proxy",
+      "name": "Nint Socket Proxy",
       "type": "socks5",
       "server": "localhost",
       "port": 1080,
@@ -16,6 +16,6 @@ proxy-groups:
   - name: 😡 Nint
     type: select
     proxies:
-      - 🤦‍♂️ Nint Socket Proxy
+      - Nint Socket Proxy
 rules:
   - IP-CIDR,10.110.0.0/16,😡 Nint
