--- a/proxy.ini
+++ b/proxy.ini
@@ -92,7 +92,7 @@ custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singa
 custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇩🇪 德国节点`url-test`(DE|Germany|德国|德|GER)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇫🇷 法国节点`url-test`(FR|France|法国|法)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇬🇧 英国节点`url-test`(UK|United Kingdom|GBR|Britain|英国|英)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇬🇧 英国节点`url-test`(UK|United Kingdom|GBR|Great Britain|英国|英)`http://www.gstatic.com/generate_204`300,,50
 ;设置分组标志位
 
 custom_proxy_group=🥶 冷门国家节点`url-test`(SE|Sweden|瑞典|BG|Bulgaria|保加利亚|AT|Austria|奥地利|IE|Ireland|爱尔兰|TR|Turkey|土耳其|CA|Canada|加拿大|NL|Netherlands|荷兰|RU|Russia|俄罗斯|AU|Australia|澳大利亚|IN|India|印度|ID|Indonesia|印度尼西亚|R|Brazil|巴西|AR|Argentina|阿根廷|CL|Chile|智利)`http://www.gstatic.com/generate_204`300,,50
