--- a/proxy.ini
+++ b/proxy.ini
@@ -119,8 +119,8 @@ overwrite_original_rules=true
 
 ;luck
 
-rename=!!GROUPID=0!!(^.*)@$1 <\= [奶昔]
-rename=!!GROUPID=1!!(^.*)@$1 <\= [库洛米]
-rename=!!GROUPID=2!!(^.*)@$1 <\= [Nint]
+rename=!!GROUPID=0!!(^.*)@$1 - [奶昔]
+rename=!!GROUPID=1!!(^.*)@$1 - [库洛米]
+rename=!!GROUPID=2!!(^.*)@$1 - [Nint]
 
 append_proxy_type=true
