--- a/proxy.ini
+++ b/proxy.ini
@@ -122,6 +122,6 @@ overwrite_original_rules=true
 
 rename=!!GROUPID=0!!(^.*)@$1 - [奶昔]
 rename=!!GROUPID=1!!(^.*)@$1 - [库洛米]
-rename=!!GROUPID=2!!(^.*)@$1 - [Nint]
+rename=!!GROUPID=2!!(^.*)@$1 - [任拓]
 
 append_proxy_type=true
