exclude and rename

--- a/proxy.ini
+++ b/proxy.ini
@@ -119,9 +119,12 @@ overwrite_original_rules=true
 ;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
 
 ;luck
-
+exclude_remarks=(Traffic Reset|Expire Date)
 rename=!!GROUPID=0!!(^.*)@$1 - [奶昔]
 rename=!!GROUPID=1!!(^.*)@$1 - [库洛米]
 rename=!!GROUPID=2!!(^.*)@$1 - [任拓]
+rename=!!GROUPID=0!!([0-9]*.[0-9]*.GB).|.([0-9]*.[0-9]*.GB)@总流量: $1, 已使用: $2, [奶昔]
+rename=!!GROUPID=1!!([0-9]*.[0-9]*.GB).|.([0-9]*.[0-9]*.GB)@总流量: $1, 已使用: $2, [库洛米]
+
 
 append_proxy_type=true
