--- a/proxy.ini
+++ b/proxy.ini
@@ -123,8 +123,8 @@ exclude_remarks=(Traffic Reset|Expire Date)
 rename=!!GROUPID=0!!(^.*)@$1 - [奶昔]
 rename=!!GROUPID=1!!(^.*)@$1 - [库洛米]
 rename=!!GROUPID=2!!(^.*)@$1 - [任拓]
-rename=!!GROUPID=0!!([0-9]*.[0-9]*.GB).|.([0-9]*.[0-9]*.GB)@总流量: $1, 已使用: $2, [奶昔]
-rename=!!GROUPID=1!!([0-9]*.[0-9]*.GB).|.([0-9]*.[0-9]*.GB)@总流量: $1, 已使用: $2, [库洛米]
+rename=!!GROUPID=0!!(^[0-9]*.[0-9]*.GB).|.([0-9]*.[0-9]*.GB$)@总流量: $1, 已使用: $2
+rename=!!GROUPID=1!!(^[0-9]*.[0-9]*.GB).|.([0-9]*.[0-9]*.GB$)@总流量: $1, 已使用: $2
 
 
 append_proxy_type=true
