--- a/proxy.ini
+++ b/proxy.ini
@@ -120,11 +120,11 @@ overwrite_original_rules=true
 
 ;luck
 exclude_remarks=(Traffic Reset|Expire Date)
-rename=!!GROUPID=0!!(^.*)@$1 - [奶昔]
+rename=!!GROUPID=0!!(^.*)@奶昔 - $1
 rename=!!GROUPID=0!!(^[0-9]*\.*[0-9]*.GB) \| ([0-9]*\.*[0-9]*.GB)@总流量: $2 已使用: $1
-rename=!!GROUPID=1!!(^.*)@$1 - [库洛米]
+rename=!!GROUPID=1!!(^.*)@库洛米 - $1
 rename=!!GROUPID=1!!(^[0-9]*\.*[0-9]*.GB) \| ([0-9]*\.*[0-9]*.GB)@总流量: $2 已使用: $1
-rename=!!GROUPID=2!!(^.*)@$1 - [任拓]
+rename=!!GROUPID=2!!(^.*)@任拓 - $1
 
 
 append_proxy_type=true
